This will reduce or eliminate the momentary display of the window frame when showing/hiding the window. It does this by adding/removing the frame extending into the client upon showing or hiding using DwmExtendFrameIntoClientArea, respectively.

BUG=593676

Review-Url: https://codereview.chromium.org/1903223005
Cr-Commit-Position: refs/heads/master@{#403046}

Former-commit-id: 03e3572cecc4f206b260dbeddf40172d46217617